# vajra-terminal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.toml  install.sh
src/: app.rs  main.rs
src/network/: client.rs
src/ui/: layout.rs
